<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/message_add_url"
        android:textAlignment="center"
        android:textColor="@color/color_text_title"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editText_input_url"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:autofillHints="text"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/url"
        android:inputType="text"
        android:textSize="15sp"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/textButton_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/textButton_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>