<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/message_delete_note"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/textButton_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/textButton_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>